# fmtm

./: .all-contributorsrc  .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CSVDump.py  Dockerfile  Dockerfile.prod  Doxyfile  INSTALL.md  Justfile  Makefile  ODKDump.py  OdkCentral.py  README.md  RESET.md  build_ci_imgs.sh  central.dockerfile  compose.development.yaml  compose.main.yaml  compose.staging.yaml  compose.yaml  config.py  coverage.html  docker-compose.deploy.yml  docker-compose.development.yml  docker-compose.josm.yml  docker-compose.local.yml  docker-compose.main.yml  docker-compose.noodk.yml  docker-compose.prod.yml  docker-compose.ssl-ext.yml  docker-compose.ssl.yml  docker-compose.staging.yml  (+18 more)
src/backend/: .dockerignore  .env copy  .env sample  Dockerfile  README.md  alembic.ini  app-entrypoint.sh  backup-entrypoint.sh  config.py  container-entrypoint.sh  env_utils.py  frontend-config.json  logging.conf  main.py  migrate-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
src/backend/app/: __init__.py  __version__.py  alembic.ini  config.py  init_s3_buckets.py  main.py  monitoring.py  s3.py  scheduler.py
src/backend/app/auth/: __init__.py  auth_deps.py  auth_logic.py  auth_routes.py  auth_schemas.py  osm.py  roles.py  temp_auth.py
src/backend/app/central/: __init__.py  central_crud.py  central_deps.py  central_routes.py  central_schemas.py
src/backend/app/db/: __init__.py  database.py  db_models.py  db_schemas.py  enums.py  languages_and_countries.py  models.py  postgis_utils.py  split_algorithm.sql
src/backend/app/debug/: __init__.py  debug_crud.py  debug_routes.py
src/backend/app/helpers/: __init__.py  helper_crud.py  helper_routes.py
src/backend/app/images/: __init__.py
src/backend/app/integrations/: __init__.py  integration_crud.py  integration_deps.py  integration_routes.py
src/backend/app/migrations/: alembic_helpers.py  env.py
src/backend/app/models/: __init__.py  enums.py  languages_and_countries.py
src/backend/app/organisations/: __init__.py  organisation_crud.py  organisation_deps.py  organisation_routes.py  organisation_schemas.py
src/backend/app/organization/: organization_crud.py  organization_deps.py  organization_routes.py  organization_schemas.py
src/backend/app/pagination/: __init__.py  pagination.py
src/backend/app/projects/: __init__.py  project_crud.py  project_deps.py  project_export.py  project_routes.py  project_schemas.py  utils.py
src/backend/app/static/: __init__.py
src/backend/app/submission/: __init__.py  submission_crud.py  submission_routes.py
src/backend/app/submissions/: __init__.py  submission_crud.py  submission_deps.py  submission_routes.py  submission_schemas.py
src/backend/app/tasks/: __init__.py  task_crud.py  task_deps.py  task_routes.py  task_schemas.py  tasks_crud.py  tasks_routes.py  tasks_schemas.py
src/backend/app/test_data/: __init__.py  building_foot_jnk.geojson  buildings.xls
src/backend/app/users/: __init__.py  user_crud.py  user_deps.py  user_routes.py  user_schemas.py
src/backend/auth/: __init__.py  auth_routes.py  login_route.py  osm.py  routers.py
src/backend/central/: central_crud.py  central_routes.py  central_schemas.py
src/backend/db/: __init__.py  database.py  db_models.py  postgis_utils.py  user_crud.py
src/backend/debug/: debug_crud.py  debug_routes.py  debug_schemas.py
src/backend/docs/: learn_fastapi.py
src/backend/migrations/: 000-remove-user-password.sql  001-alter-field-type-task_split_type.sql  001-drop-dup-fields.sql  001-project-split-type-fields.sql  001-remove-complete-count.sql  001-submission-ids.sql  002-add-profile-img.sql  002-add-xforms-table.sql  002-create-geometry-log.sql  002-geomlog-to-entity.sql  002-remove-splitter-tables.sql  003-add-tms-url.sql  003-jsonb-geom-geometry-log.sql  003-project-roles.sql  003-timestamp-names.sql  004-add-approved-in-organisation.sql  004-organisation-odk-creds.sql  004-project-create-refine.sql  004-project-extra-fields.sql  004-task-events.sql  004-update-default-values.sql  005-add-user-lastactiveat.sql  005-cleanup-project-table.sql  005-drop-unnecessary-tables.sql  005-remove-centroid.sql  005-remove-qrcode.sql  005-rename-public-beta.sql  006-add-task-comment.sql  006-basemaps-table.sql  006-create-submission-photos-table.sql  006-drop-dup-fields.sql  006-electric-sql.sql  006-index-roles.sql  006-task-history-uuid.sql  007-add-extract-url.sql  007-migrate-tiles.sql  007-remove-xform-table.sql  007-rename-task-history.sql  008-add-org-email.sql  008-add-user-in-org.sql  (+22 more)
src/backend/migrations/2024-03-21/: 001-update-odk-entities-osm-id.sql
src/backend/migrations/archived/: .sqlfluffignore
src/backend/migrations/init/: 0-main.sql  1-enums.sql  2-tables.sql  fmtm_base_schema.sql
src/backend/migrations/revert/: 001-remove-complete-count.sql  003-add-tms-url.sql  (+20 more)
src/backend/models/: enums.py  languages_and_countries.py  schemas.py
src/backend/odkconvert/: .flake8  .gitignore  Makefile  ODKForm.py  ODKInstance.py  OdkCentral.py  README.md  basemapper.py  convert.py  make_data_extract.py  mbase.py  odk2csv.py  odk_client.py  setup.py  sqlite.py  xforms.yaml
src/backend/pagination/: pagination.py
src/backend/projects/: project_crud.py  project_routes.py  project_schemas.py
src/backend/routes/: users.py
src/backend/scheduler/: inactive_users.py  project_stats.py  unlock_tasks.py  upload_submissions_to_s3.py
src/backend/stats/: __init__.py  timeseries.py  total_mapped.py
src/backend/submission/: submission_crud.py  submission_routes.py  submission_schemas.py
src/backend/tasks/: tasks_crud.py  tasks_routes.py  tasks_schemas.py
src/backend/test_data/: __init__.py
src/backend/tests/: .pyodk_config.toml  __init__.py  conftest.py  test_auth_routes.py  test_central_routes.py  test_organisation_routes.py  test_projects.py  test_projects_routes.py  test_submission_routes.py  test_task_routes.py  test_users.py
src/backend/users/: user_crud.py  user_routes.py  user_schemas.py
(+3284 files in other folders)
