# Copyright (c) 2022, 2023 Humanitarian OpenStreetMap Team
#
# This file is part of FMTM.
#
#     FMTM is free software: you can redistribute it and/or modify
#     it under the terms of the GNU General Public License as published by
#     the Free Software Foundation, either version 3 of the License, or
#     (at your option) any later version.
#
#     FMTM is distributed in the hope that it will be useful,
#     but WITHOUT ANY WARRANTY; without even the implied warranty of
#     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#     GNU General Public License for more details.
#
#     You should have received a copy of the GNU General Public License
#     along with FMTM.  If not, see <https:#www.gnu.org/licenses/>.
#

[project]
name = "fmtm"
dynamic = ["version"]
description = "Field Mapping Tasking Manager - coordinated field mapping."
authors = [
    {name = "HOTOSM", email = "sysadmin@hotosm.org"},
]
dependencies = [
    "uvicorn==0.30.1",
    "fastapi==0.111.1",
    "pydantic==2.8.1",
    "pydantic-settings==2.3.4",
    "geojson-pydantic==1.1.0",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.31",
    "SQLAlchemy-Utils==0.41.2",
    "psycopg2==2.9.9",
    "geoalchemy2==0.15.2",
    "geojson==3.1.0",
    "shapely==2.0.5",
    "pyxform==2.0.3",
    "loguru==0.7.2",
    "minio==7.2.7",
    "pyproj==3.6.1",
    "asgiref==3.8.1",
    "sozipfile==0.3.2",
    "cryptography>=42.0.8",
    "defusedxml>=0.7.1",
    "pyjwt>=2.8.0",
    "async-lru>=2.0.4",
    "osm-login-python==1.0.3",
    "osm-fieldwork==0.14.1",
    "osm-rawdata==0.3.0",
    "fmtm-splitter==1.3.0",
]
requires-python = ">=3.11"
readme = "../../README.md"
license = {text = "GPL-3.0-only"}

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.1",
    "commitizen>=3.27.0",
]
test = [
    "pytest==8.2.1",
    "httpx==0.27.0",
    "pytest-asyncio==0.23.7",
    "pyinstrument==4.6.2",
    "coverage>=7.5.3",
    "coverage-badge>=1.1.1",
]
debug = [
    "ipdb>=0.13.13",
    "debugpy>=1.8.1",
]
docs = [
    "mkdocs==1.6.0",
    "mkdocs-material==9.5.25",
    "mkdocstrings-python==1.10.3",
    "mkdocs-exclude==1.0.2",
    "python-dotenv==1.0.1",
    "mkdocs-git-revision-date-localized-plugin>=1.2.6",
    "mdx-truly-sane-lists>=1.3",
]
monitoring = [
    "sentry-sdk[opentelemetry]>=2.3.1",
    #"opentelemetry-sdk>=1.25.0",
    #"opentelemetry-api>=1.25.0",
    #"opentelemetry-exporter-otlp>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-instrumentation-logging>=0.46b0",
    "opentelemetry-instrumentation-psycopg2>=0.46b0",
    "opentelemetry-instrumentation-requests>=0.46b0",
]

[build-system]
requires = ["pdm-pep517==1.1.4"]
build-backend = "pdm.pep517.api"

[tool.pdm]
source-includes = ["../../CHANGELOG.md", "../../LICENSE", "../../README.md"]
version = {from = "app/__version__.py"}

[tool.ruff]
fix = true
line-length = 88
target-version = "py311"
exclude = [
    ".ruff_cache",
    "__pypackages__",
    "app/__version__.py",
]
[tool.ruff.lint]
select = ["I", "E", "W", "D", "B", "F", "N", "Q"]
ignore = ["N805", "B008"]
[tool.ruff.lint.pydocstyle]
convention = "google"
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query",
    "fastapi.File",
    "fastapi.Security",
]

[tool.pyright]
extraPaths = ["__pypackages__/3.11/lib/"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]
asyncio_mode="auto"

[tool.commitizen]
name = "cz_conventional_commits"
version = "2024.3.1"
version_files = [
    "pyproject.toml:version",
    "app/__version__.py",
    "../frontend/package.json:version",
    "../../chart/Chart.yaml:appVersion",
]
changelog_file = "../../CHANGELOG.md"
update_changelog_on_bump = true

[tool.sqlfluff.core]
dialect = "postgres"
large_file_skip_byte_limit = 30000  # Required to process fmtm_base_schema.sql
exclude_rules = "CP05"  # Avoid capitalisation of enums

[tool.codespell]
skip = "contrib/*.py,*languages_and_countries.py,*pnpm-lock.yaml,*CHANGELOG.md"
ignore-words-list = "ProjectIn"
write-changes = true
